--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python manage.py test
+  - coverage run --source='.' manage.py test
+  - coverage report
